production justification start up

--- a/corporate.html
+++ b/corporate.html
@@ -19,7 +19,7 @@
 
     <title>PRJ4 Base Group Template &mdash; Corporate Information</title>
 
-    <!--Embedeed fonts-->
+<!--Embedeed fonts-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=New+Rocker&display=swap" rel="stylesheet">
@@ -35,7 +35,6 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&family=Permanent+Marker&family=Rock+Salt&family=RocknRoll+One&display=swap" rel="stylesheet">
-<title>Amplify-Our story</title>
 
     <!-- Google Analytics code goes just below here (check PRJ4 Guide for details) -->
 
@@ -131,8 +130,10 @@
             This website was created by&hellip; <em>(only students listed below will be graded!)</em>
           </p>
           <ol>
-            <li class="body-text-corporate">Student (ID: 000000)</li>
-            <li class="body-text-corporate">Student (ID: 000000)</li>
+            <li class="body-text-corporate">Ana Dondea (ID: 223234)</li>
+            <li class="body-text-corporate">Atina Dimitrova  (ID: 220730)</li>
+            <li class="body-text-corporate">Caroll-Ann Casseres  (ID: 221906)</li>
+            <li class="body-text-corporate">Lars Piechocki  (ID: 222190)</li>
           </ol>
           <!-- End General -->
 
@@ -151,34 +152,34 @@
             <tbody>
               <tr>
                 <th scope="row" class="body-text-corporate">1.</th>
-                <td class="body-text-corporate">Ana Dondea</td>
-                <td class="body-text-corporate">Value</td>
+                <td class="body-text-corporate">223234</td>
+                <td class="body-text-corporate">Living life to the fullest</td>
                 <td>
-                  <a href="our-story.html" class="body-text-corporate">Content title</a>
+                  <a href="our-story.html" class="body-text-corporate">Our Values</a>
                 </td>
               </tr>
               <tr>
                 <th scope="row" class="body-text-corporate">2.</th>
-                <td class="body-text-corporate">what</td>
-                <td></td>
+                <td class="body-text-corporate">220730</td>
+                <td class="body-text-corporate">Forming connections</td>
                 <td>
-                  <a href="#" class="body-text-corporate"></a>
+                  <a href="our-story.html" class="body-text-corporate">Our Values</a>
                 </td>
               </tr>
               <tr>
                 <th scope="row" class="body-text-corporate">3.</th>
-                <td></td>
-                <td></td>
+                <td class="body-text-corporate">221906</td>
+                <td class="body-text-corporate">Adrenaline Rush</td>
                 <td>
-                  <a href="#" class="body-text-corporate"></a>
+                  <a href="our-story.html" class="body-text-corporate">Our Values</a>
                 </td>
               </tr>
               <tr>
                 <th scope="row" class="body-text-corporate">4.</th>
-                <td></td>
-                <td></td>
+                <td class="body-text-corporate">222190</td>
+                <td class="body-text-corporate">Freedom of expression</td>
                 <td>
-                  <a href="#" class="body-text-corporate">what</a>
+                  <a href="our-story.html" class="body-text-corporate">Our Values</a>
                 </td>
               </tr>
             </tbody>
@@ -194,19 +195,37 @@
               <em>&mdash; see the example below from the BUas brand book:</em>
               <ul class="list-unstyled">
                 <li>
-                  <span class="border border-secondary rounded px-2 me-1" style="background-color: #EE7622;"></span>
+                  <span class="border border-secondary rounded px-2 me-1" style="background-color: #c84141;"></span>
                   #EE7622
                   <em>The orange colour refers to the Dutch identity and the city of Breda (Oranjestad). Orange stands for&hellip;</em>
                 </li>
                 <li>
-                  <span class="border border-secondary rounded px-2 me-1" style="background-color: #00406B;"></span>
+                  <span class="border border-secondary rounded px-2 me-1" style="background-color: #1d1c1c;"></span>
                   #00406B
                   <em>Dark blue signifies&hellip;</em>
+                </li>
+                <li>
+                  <span class="border border-secondary rounded px-2 me-1" style="background-color: #edf11a;"></span>
+                  #EE7622
+                  <em>The orange colour refers to the Dutch identity and the city of Breda (Oranjestad). Orange stands for&hellip;</em>
+                </li>
+                <li>
+                  <span class="border border-secondary rounded px-2 me-1" style="background-color: #B18DD4;"></span>
+                  #EE7622
+                  <em>The orange colour refers to the Dutch identity and the city of Breda (Oranjestad). Orange stands for&hellip;</em>
                 </li>
               </ul>
             </li>
            <div class="body-text-corporate">
-            <li>Font choices</li>
+            <h4>Font choices</h4>
+            <h5 class="heading-corporate">Heading Fonts</h5>
+            <li class="new-rocker-font">New Rocker</li>
+            <li class="medieval-sharp-font">Medieva Sharp</li>
+            <h5>Accent font</h5>
+            <li class="rock-salt-font">Rock Salt</li>
+            <h5 class="heading-corporate">Body Fonts</h5>
+            <li class="tauri-font">Tauri</li>
+            <br>
             <li>User interface patterns (e.g. grids, carousels, menu organizations etc.)</li>
             <li>The structure of the <strong>navigation and content</strong> (e.g. how content units are distributed across pages)</li>
             <li>All these elements must be justified by referring to the theory <strong>and/or vocabulary</strong> of design</li>
