--- a/index.html
+++ b/index.html
@@ -69,18 +69,24 @@
           <li class="nav-item">
             <a class="nav-link" href="https://buas-media-interactive.github.io/prj4-guide/" target="_blank">PRJ4 Guide</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="corporate.html">Corporate</a>
-          </li>
+            <ul class="nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="corporate.html">Corporate</a>
+                </li>
+            </ul>
         </ul>
       </div>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
     </div>
   </nav>
   <!-- End of navigation bar -->
 
     <!--Start of the content-->
     <div class="content">
-      <div class="container my-5">
+      <div class="container-content my-5">
         <div class="row justify-content-center">
           <div class="col-12 col-md-8 text-center">
         <div class="h-100 d-flex flex-column justify-content-center align-items-center">
@@ -88,8 +94,7 @@
             <div aria-busy="true" aria-describedby="progress-bar">
                 <div class="progress"></div>
             </div>
-            <a href="#bg-section" class="btn btn-primary">Go to the feature</a>
-            <progress id="progress-bar" aria-label="Content loading…"></progress>  
+            <a href="#bg-section" class="btn btn-primary">Go to the feature</a> 
             <br>
             <br>
             </div>
