--- a/corporate.html
+++ b/corporate.html
@@ -133,7 +133,7 @@
           <h2 id="general" class="heading-corporate">General Information</h2>
           <p class="body-text-corporate">
             This branded website is publicly available at
-            <a href="https://buas-media-interactive.github.io/">buas-media-interactive.github.io/my-website</a>
+            <a class="nav-link-corporate" href="https://buas-media-interactive.github.io/">buas-media-interactive.github.io/my-website</a>
             <em>(please change text <strong>and</strong> hyperlink destination)</em>
           </p>
           <p class="body-text-corporate">
@@ -198,44 +198,49 @@
           <div class="body-text-corporate">
           <h2 id="production" class="heading-corporate">Production</h2>
           <h4 id="production-1" class="heading-corporate-1">Design Elements</h4>
-          <p class="body-text-corporate">Please provide a list of design elements alongside their justifications:</p>
-          <ul>
-            <li class="body-text-corporate">
-              A colour scheme (with HTML colour codes, which must be consistent with your final website)
-              <em>&mdash; see the example below from the BUas brand book:</em>
+          <h4>Color palette</h4>
               <ul class="list-unstyled">
                 <li>
                   <span class="border border-secondary rounded px-2 me-1" style="background-color: #c84141;"></span>
                   #EE7622
-                  <em>The orange colour refers to the Dutch identity and the city of Breda (Oranjestad). Orange stands for&hellip;</em>
+                  <em>•	Red is a strong hue that frequently connotes intensity, emotion, and energy—elements that are in perfect harmony with the essence of hard rock music. Red can arouse in fans the intense emotion and energy associated with the genre. Because it draws the eye, this color is appropriate for a company that wishes to come across as daring and memorable.
+
+                    &hellip;</em>
                 </li>
+                <br>
                 <li>
                   <span class="border border-secondary rounded px-2 me-1" style="background-color: #1d1c1c;"></span>
                   #00406B
-                  <em>Dark blue signifies&hellip;</em>
+                  <em>•	Since dark grey is a strong and authoritative color, it could be interpreted as a representation of the firm foundation hard rock music has had throughout music history. Because of its versatility, it can be used to ground branding while allowing for an edge that is very much in keeping with hard rock aesthetics. It may also be readily matched with more brilliant hues. Moreover, dark grey gives the possibility to have a bolder design, making space for bolder colors such as red and yellow. As the genre of rock is always displayed within the colors of strong red and grey or black, this color palette is suitable for Amplify as a brand and for its target audience. &hellip;</em>
                 </li>
+                <br>
                 <li>
                   <span class="border border-secondary rounded px-2 me-1" style="background-color: #edf11a;"></span>
                   #EE7622
-                  <em>The orange colour refers to the Dutch identity and the city of Breda (Oranjestad). Orange stands for&hellip;</em>
+                  <em>•	Yellow is used as an accent color to offer an intense touch that draws attention without overpowering the main color scheme. Yellow can stand for the strong energy and bursts of excitement that are connected to electric guitar solos and live performances in the hard rock genre. It's a color that, with its brightness, can energize a brand identity and inspire passion.&hellip;</em>
                 </li>
+                <br>
                 <li>
                   <span class="border border-secondary rounded px-2 me-1" style="background-color: #B18DD4;"></span>
                   #EE7622
-                  <em>The orange colour refers to the Dutch identity and the city of Breda (Oranjestad). Orange stands for&hellip;</em>
+                  <em>•	A sense of mystery and intricacy can be conveyed by Purple, which is evocative of the depth and occasionally the cryptic or gloomy lyrics present in hard rock music. Due to its historical associations with monarchy and wealth, this hue may lend the brand an air of exclusivity and appeal to fans who value their musical preferences highly and regard them as essential components of who they are. In combination with yellow, being a vibrant, bright, and warm color, using it as an accent against purple produces a striking contrast.&hellip;</em>
                 </li>
-              </ul>
-            </li>
+                <br>
            <div class="body-text-corporate">
             <h4>Font choices</h4>
-            <h5 class="heading-corporate">Heading Fonts</h5>
-            <li class="new-rocker-font">New Rocker</li>
-            <li class="medieval-sharp-font">Medieva Sharp</li>
-            <li class="rock-salt-font">Rock Salt</li>
-            <h5 class="heading-corporate">Body Fonts</h5>
-            <li class="tauri-font">Tauri</li>
+            <h5 class="heading-corporate-1">Heading Fonts</h5>
+            <li class="medieval-sharp-font">•Medieva Sharp</li>
+            <em>The hard rock vibe is perfectly complemented by the sharp, edgy appearance of this font. Hard rock music is frequently connected with a raw intensity that can be evoked by its powerful design and sharp serifs. Like the main acts at a rock concert, it stands out and attracts attention.</em>
+           
+            <li class="rock-salt-font">•Rock Salt</li>
+            <em>With its handcrafted appearance and bold presence, Rock Salt may evoke the rebellious and raw spirit of rock culture. Fans may find it reminiscent of vintage band logos and album covers, which are frequently customized and possess a distinctive style.	</em>
+
             <br>
-            <li>User interface patterns (e.g. grids, carousels, menu organizations etc.)</li>
+            <h5 class="heading-corporate-1">Body Fonts</h5>
+            <li class="tauri-font">•Tauri</li>
+            <em>Tauri is a legible, more solemn typeface that works well for body writing. For readers to explore and absorb information with ease, the body font needs to be comprehensible even though the headlines are more ostentatious and complement rock's expressive style. Without drawing attention to itself, Tauri's modern, minimalistic line counterbalances the more flashy header fonts. </em>
+            
+            <h4>User interface patterns (e.g. grids, carousels, menu organizations etc.)</h4>
             <li>The structure of the <strong>navigation and content</strong> (e.g. how content units are distributed across pages)</li>
             <li>All these elements must be justified by referring to the theory <strong>and/or vocabulary</strong> of design</li>
             <li>Please relate these elements to other units, for example:
@@ -250,8 +255,8 @@
           <h4 id="production-2" class="heading-corporate-1">Credits</h4>
           <p>Please provide links and/or credits for third-party elements including:</p>
           <ul>
-            <li>HTML <strong>templates</strong> if these are different from this one (<a href="https://github.com/buas-media-interactive/prj4-group-template" target="_blank">buas-media-interactive/prj4-group-template</a>)</li>
-            <li>The source code for <strong>UX patterns</strong> other than the ones provided by the “Bootstrap” library (see <a href="https://getbootstrap.com/docs/5.2/" target="_blank">getbootstrap.com/docs</a> for a list of such patterns)</li>
+            <li>HTML <strong>templates</strong> if these are different from this one (<a class="nav-link-corporate" href="https://github.com/buas-media-interactive/prj4-group-template" target="_blank">buas-media-interactive/prj4-group-template</a>)</li>
+            <li>The source code for <strong>UX patterns</strong> other than the ones provided by the “Bootstrap” library (see <a class="nav-link-corporate" href="https://getbootstrap.com/docs/5.2/" target="_blank">getbootstrap.com/docs</a> for a list of such patterns)</li>
             <li><strong>Images</strong> that were not produced by students themselves, including when crediting is not mandatory (in other words, we ask you to credit Unsplash images)</li>
           </ul>
           <h4 id="production-3" class="heading-corporate-1">Testing Report</h4>
@@ -404,19 +409,19 @@
 
           <ol>
             <li>
-              <a href="https://" target="_blank">Description of evidence #1</a>
+              <a class="nav-link-corporate" href="https://" target="_blank">Description of evidence #1</a>
             </li>
             <li>
-              <a href="https://" target="_blank">Description of evidence #2</a>
+              <a class="nav-link-corporate" href="https://" target="_blank">Description of evidence #2</a>
             </li>
             <li>
-              <a href="https://" target="_blank">Description of evidence #3</a>
+              <a class="nav-link-corporate" href="https://" target="_blank">Description of evidence #3</a>
             </li>
             <li>
-              <a href="https://" target="_blank">Description of evidence #4</a>
+              <a class="nav-link-corporate" href="https://" target="_blank">Description of evidence #4</a>
             </li>
             <li>
-              <a href="https://" target="_blank">Description of evidence #5</a>
+              <a class="nav-link-corporate" href="https://" target="_blank">Description of evidence #5</a>
             </li>
           </ol>
         </div> 
