--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
 <div class="container-product" id="bg-section">
   <div class="row align-items-center">
       <!-- Image Column -->
-      <div class="col-lg-6">
+      <div class="col-12 col-md-6">
           <img src="images/screen-map.png" class="img-fluid img-size" alt="Descriptive Alt Text">
       </div>
       <!-- Text Column -->
-      <div class="col-lg-6 center-custom">
+      <div class="col-12 col-md-6 center-custom">
           <h2>All your upcoming rock concerts in one place</h2>
           <p>Amplify is the ultimate tool for hard rock fans. Take control of your concert experience by handpicking the shows you're gearing up for. Tell us your preferences, and we'll tailor your Amplify journey to match your unique style of rocking!</p>
       </div>
@@ -121,13 +121,13 @@
 <div class="container-product-2">
   <div class="row align-items-center">
     <!-- Text Column -->
-    <div class="col-lg-6 center-custom">
+    <div class="col-12 col-md-6 center-custom">
       <h2>Connect with Hard Rock Fans Hitting the Same Shows</h2>
       <p>Based on your upcoming concert thrills, find and connect directly with fellow hard rock enthusiasts that share your concert vibe and band tastes. Find your people, your tribe.
       </p>
   </div>
   <!-- Image Column -->
-  <div class="col-lg-6 text-center">
+  <div class="col-12 col-md-6 text-center">
     <img src="images/screen-match.png" class="img-fluid img-size text-center" alt="Descriptive Alt Text">
 </div>
 </div>
