--- a/corporate.html
+++ b/corporate.html
@@ -227,20 +227,20 @@
                 </li>
                 <br>
            <div class="body-text-corporate">
-            <h4>Font choices</h4>
-            <h5 class="heading-corporate-1">Heading Fonts</h5>
+            <h4 class="heading-corporate-1">Font choices</h4>
+            <h5 class="body-text-corporate">Heading Fonts</h5>
             <li class="medieval-sharp-font">•Medieva Sharp</li>
-            <em>The hard rock vibe is perfectly complemented by the sharp, edgy appearance of this font. Hard rock music is frequently connected with a raw intensity that can be evoked by its powerful design and sharp serifs. Like the main acts at a rock concert, it stands out and attracts attention.</em>
+            <em >The hard rock vibe is perfectly complemented by the sharp, edgy appearance of this font. Hard rock music is frequently connected with a raw intensity that can be evoked by its powerful design and sharp serifs. Like the main acts at a rock concert, it stands out and attracts attention.</em>
            
             <li class="rock-salt-font">•Rock Salt</li>
             <em>With its handcrafted appearance and bold presence, Rock Salt may evoke the rebellious and raw spirit of rock culture. Fans may find it reminiscent of vintage band logos and album covers, which are frequently customized and possess a distinctive style.	</em>
 
             <br>
-            <h5 class="heading-corporate-1">Body Fonts</h5>
+            <h5 class="heading-corporate-1 em-spacing">Body Fonts</h5>
             <li class="tauri-font">•Tauri</li>
             <em>Tauri is a legible, more solemn typeface that works well for body writing. For readers to explore and absorb information with ease, the body font needs to be comprehensible even though the headlines are more ostentatious and complement rock's expressive style. Without drawing attention to itself, Tauri's modern, minimalistic line counterbalances the more flashy header fonts. </em>
             
-            <h4>User interface patterns (e.g. grids, carousels, menu organizations etc.)</h4>
+            <h4 class="em-spacing1">User interface patterns (e.g. grids, carousels, menu organizations etc.)</h4>
             <li>The structure of the <strong>navigation and content</strong> (e.g. how content units are distributed across pages)</li>
             <li>All these elements must be justified by referring to the theory <strong>and/or vocabulary</strong> of design</li>
             <li>Please relate these elements to other units, for example:
