--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div aria-busy="true" aria-describedby="progress-bar">
                 <div class="progress"></div>
             </div>
-            <a href="#bg-section" class="btn btn-primary">Go to the feature</a> 
+            <a href="#bg-section" class="btn btn-lg btn-danger m-1 d-block d-sm-inline btn-primary">Check our features</a>
             <br>
             <br>
             </div>
@@ -143,7 +143,7 @@
     <div class="col-md-8 col-lg-6 mx-auto py-5">
       <h1 class="display-3">Ready to rock out the concert experience?</h1>
       <p class="mt-5">
-        <a href="#" class="btn btn-lg btn-danger m-1 d-block d-sm-inline">Download our app on AppleStore or GooglePlay</a>
+        <a href="#" class="btn btn-lg btn-danger m-1 d-block d-sm-inline btn-secondary">Download our app on AppleStore or GooglePlay</a>
       </p>
     </div>
   </div>
