--- a/our-story.html
+++ b/our-story.html
@@ -102,7 +102,7 @@
           <h1 class="fw-bold our-story-text-heading">Amplify</h1>
           <h2 class="our-story-text-body">The online platform for togetherness!</h2>
           <p class="mt-2">
-            <a href="#" class="btn btn-lg btn-primary m-1 our-story-heading-text-button">Join now!</a>
+            <a href="https://www.instagram.com/amplifynetherlands/" class="btn btn-lg btn-primary m-1 our-story-heading-text-button">Check out our Instagram!</a>
           </p>
           <div class="scroll-down">
           <h3>Scroll down to meet our team!</h3>
