--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <title>Amplify-Our story</title>
 
 <title>AMPLIFY website</title>
+
 </head> 
 <body class="background">
   <div class="content">
@@ -105,7 +106,7 @@
 
   
 <!--Start of our Features-->
-<div class="container-product" id="bg-section">
+<div class="container-product-sm-ms-lg-xl-xxl" id="bg-section">
   <div class="row align-items-center">
       <!-- Image Column -->
       <div class="col-12 col-md-6">
