--- a/index.html
+++ b/index.html
@@ -104,51 +104,63 @@
       </div>
     </div>
 
-  
-<!--Start of our Features-->
-<div class="container-product-sm-ms-lg-xl-xxl" id="bg-section">
-  <div class="row align-items-center">
-      <!-- Image Column -->
-      <div class="col-12 col-md-6">
-          <img src="images/screen-map.png" class="img-fluid img-size" alt="Descriptive Alt Text">
-      </div>
-      <!-- Text Column -->
-      <div class="col-12 col-md-6 center-custom">
-          <h2>All your upcoming rock concerts in one place</h2>
-          <p>Amplify is the ultimate tool for hard rock fans. Take control of your concert experience by handpicking the shows you're gearing up for. Tell us your preferences, and we'll tailor your Amplify journey to match your unique style of rocking!</p>
-      </div>
+<!-- Our Features start -->
+<div class="container-fluid my-0 bg-purple1 text-center">
+  <div class="row justify-content-center align-items-center flex-column-reverse-mobile">
+    <!-- Image Column -->
+    <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
+      <img src="images/screen-map.png" alt="Descriere relevantă" class="img-size img-fluid">
+    </div>
+     <!-- Text Column -->
+    <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
+      <h2>All your upcoming rock concerts in one place</h2>
+      <p>Amplify is the ultimate tool for hard rock fans. Take control of your concert experience by handpicking the shows you're gearing up for. Tell us your preferences, and we'll tailor your Amplify journey to match your unique style of rocking!</p>
+    </div>
   </div>
-</div>
-<div class="container-product-2">
-  <div class="row align-items-center">
-    <!-- Text Column -->
-    <div class="col-12 col-md-6 center-custom">
-      <h2>Connect with Hard Rock Fans Hitting the Same Shows</h2>
-      <p>Based on your upcoming concert thrills, find and connect directly with fellow hard rock enthusiasts that share your concert vibe and band tastes. Find your people, your tribe.
-      </p>
-  </div>
-  <!-- Image Column -->
-  <div class="col-12 col-md-6 text-center">
-    <img src="images/screen-match.png" class="img-fluid img-size text-center" alt="Descriptive Alt Text">
-</div>
-</div>
-</div>
-<div class="container-product-3">
-  <h1>Rock out in a duet or unleash the power of a crowd</h1>
-  <img src="images/screen-profile.png" alt="Descriptive Alt Text" class="text-center img-fluid img-size-1">
-  <p class="align-custom">Reveal your personal style on Amplify by personalising your profile. How do you prefer to rock out? In a massive mosh pit with fellow headbangers, or in a more intimate setting? Are you all about the high energy of the pit, or do you lean towards a more laid-back vibe?</p>
 </div>
 
-<div class="py-2 py-md-4 py-lg-5 text-center container-product-4 bg-gradient text-light">
-  <div class="row">
-    <div class="col-md-8 col-lg-6 mx-auto py-5">
+<div class="container-fluid my-0 bg-purple2 text-center">
+  <div class="row justify-content-center align-items-center flex-column-reverse-mobile">
+    <!-- Text Column -->
+    <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
+      <h2>Connect with Hard Rock Fans Hitting the Same Shows</h2>
+      <p>Based on your upcoming concert thrills, find and connect directly with fellow hard rock enthusiasts that share your concert vibe and band tastes. Find your people, your tribe.</p>
+    </div>
+    <!-- Image Column -->
+    <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
+      <img src="images/screen-match.png" alt="Descriere relevantă" class="img-size img-fluid">
+    </div>
+  </div>
+</div>
+
+
+<div class="container-fluid my-0 bg-purple1">
+  <div class="row justify-content-center align-items-center flex-column-reverse-mobile">
+    <!-- Text Column -->
+    <div class="col-12 text-center text-container-mobile mb-3"> <!-- Adăugat mb-3 pentru a adăuga spațiu sub text -->
+      <h1>Rock out in a duet or unleash the power of a crowd</h1>
+      <p>Reveal your personal style on Amplify by personalising your profile. How do you prefer to rock out?...</p>
+    </div>
+    <!-- Image Column -->
+    <div class="col-12 d-flex justify-content-center align-items-center mt-3"> <!-- Adăugat mt-3 pentru a adăuga spațiu deasupra imaginii -->
+      <img src="images/screen-profile.png" alt="Descriptive Alt Text" class="img-fluid img-size1">
+    </div>
+  </div>
+</div>
+
+
+
+<div class="container-fluid bg-purple2 text-light text-center py-2 py-md-4 py-lg-5">
+  <div class="row justify-content-center align-items-center">
+    <div class="col-12 mx-auto py-5">
       <h1 class="display-3">Ready to rock out the concert experience?</h1>
-      <p class="mt-5">
-        <a href="#" class="btn btn-lg btn-danger m-1 d-block d-sm-inline btn-secondary">Download our app on AppleStore or GooglePlay</a>
+      <p class="mt-3 mt-md-5">
+        <a href="#" class="btn btn-lg btn-danger my-2">Download our app on AppleStore or GooglePlay</a>
       </p>
     </div>
   </div>
 </div>
+
     
     <!--End of the content-->
 <!-- Start of Footer -->
